--- a/index.html
+++ b/index.html
@@ -427,8 +427,7 @@
 		<div class="container">
 			<h4>Get in Touch</h4>
 			<p>
-				Reque facer nostro et ius, cu persius mnesarchum disputando eam, clita prompta et mel vidisse phaedrum pri et. Facilisis posidonium ex his. Mutat iudico vis in, mea aeque tamquam scripserit an, mea eu ignota viderer probatus. Lorem legere consetetur ei
-				eum. Sumo aeque assentior te eam, pri nominati posidonium consttuam
+				Talk to us, and get your word done as you desire
 			</p>
 			<div class="blankdivider30">
 			</div>
