--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
 			<div class="row">
 				<div class="span2 offset1 flyIn">
 					<div class="people">
-						<img class="team-thumb img-circle" src="img/team/img-1.jpg" alt="" />
-						<h3>John Doe</h3>
+						<img class="team-thumb img-circle" src="" alt="" />
+						<h3></h3>
 						<p>
-							Art director
+
 						</p>
 					</div>
 				</div>
@@ -134,28 +134,28 @@
 				</div>
 				<div class="span2 flyIn">
 					<div class="people">
-						<img class="team-thumb img-circle" src="img/team/img-3.jpg" alt="" />
-						<h3>Neil Doe</h3>
+						<img class="team-thumb img-circle" src="img/team/img-6.jpg" alt="" />
+						<h3>Bindu Raveendra</h3>
 						<p>
-							Web designer
+							Useless
 						</p>
 					</div>
 				</div>
 				<div class="span2 flyIn">
 					<div class="people">
-						<img class="team-thumb img-circle" src="img/team/img-4.jpg" alt="" />
-						<h3>Mark Joe</h3>
+						<img class="team-thumb img-circle" src=".jpg" alt="" />
+						<h3></h3>
 						<p>
-							UI designer
+
 						</p>
 					</div>
 				</div>
 				<div class="span2 flyIn">
 					<div class="people">
-						<img class="team-thumb img-circle" src="img/team/img-5.jpg" alt="" />
-						<h3>Stephen B</h3>
+						<img class="team-thumb img-circle" src="" alt="" />
+						<h3></h3>
 						<p>
-							Digital imaging
+
 						</p>
 					</div>
 				</div>
