--- a/index.html
+++ b/index.html
@@ -56,17 +56,17 @@
 							<ul class="slides">
 								<li>
 									<p class="home-slide-content">
-										<strong>creative</strong> and passion
+										<strong>creative</strong> and <strong>passionate</strong>
 									</p>
 								</li>
 								<li>
 									<p class="home-slide-content">
-										Eat and drink <strong>design</strong>
+										ADD <strong>LIFE</strong> INTO <strong>GIFTS</strong>
 									</p>
 								</li>
 								<li>
 									<p class="home-slide-content">
-										We loves <strong>simplicity</strong>
+										SPREAD <strong>LOVE</strong>
 									</p>
 								</li>
 							</ul>
@@ -123,12 +123,12 @@
 						</p>
 					</div>
 				</div>
-				<div class="span2 flyIn">
+				<div class="span2 offset1 flyIn">
 					<div class="people">
-						<img class="team-thumb img-circle" src="img/team/img-2.jpg" alt="" />
-						<h3>Mike Doe</h3>
+						<img class="team-thumb img-circle" src="img/team/img-7.jpg" alt="" />
+						<h3>Sindhu Raveendra</h3>
 						<p>
-							Web developer
+							Artist/ Genius
 						</p>
 					</div>
 				</div>
