--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					<!-- navigation -->
 					<nav class="pull-right nav-collapse collapse">
 						<ul id="menu-main" class="nav">
-							<li><a title="team" href="#about">About</a></li>
+							<li><a title="team" href="#about">About US</a></li>
 							<li><a title="services" href="#services">Services</a></li>
 							<li><a title="works" href="#works">Works</a></li>
 							<li><a title="contact" href="#contact">Contact</a></li>
@@ -61,7 +61,7 @@
 								</li>
 								<li>
 									<p class="home-slide-content">
-										ADD <strong>LIFE</strong> INTO <strong>GIFTS</strong>
+										ADDing <strong>LIFE</strong> INTO <strong>GIFTS</strong>
 									</p>
 								</li>
 								<li>
@@ -102,8 +102,9 @@
 					<div>
 						<h2>We live with <strong>creativity</strong></h2>
 						<p>
-							Li Europan lingues es membres del sam familie. Lor separat existentie es un myth. Por scientie, musica, sport etc, litot Europa usa li sam vocabular. Li lingues differe solmen in li grammatica, li pronunciation e li plu commun vocabules. Omnicos directe
-							al desirabilite de un nov lingua franca: On refusa continuar payar custosi traductores.
+							A start up that believes gifts are more than mere presents.
+							Our products tell the stories of our customers.
+							We spread love by adding life into the gifts we make.
 						</p>
 					</div>
 				</div>
@@ -173,34 +174,34 @@
 				<div class="span3 animated-fast flyIn">
 					<div class="service-box">
 						<img src="img/icons/laptop.png" alt="" />
-						<h2>Web design</h2>
+						<h2>Stone Paintings</h2>
 						<p>
-							Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+							Gifts that last to infinity as such the eternity of a stone.
 						</p>
 					</div>
 				</div>
 				<div class="span3 animated flyIn">
 					<div class="service-box">
 						<img src="img/icons/lab.png" alt="" />
-						<h2>Web development</h2>
+						<h2>Customized Gifts</h2>
 						<p>
-							Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+							Any occasion becomes special with personalized gifts.
 						</p>
 					</div>
 				</div>
 				<div class="span3 animated-fast flyIn">
 					<div class="service-box">
 						<img src="img/icons/camera.png" alt="" />
-						<h2>Photography</h2>
+						<h2>Decor and Events</h2>
 						<p>
-							Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+							Setting the mood and framing the emotion.
 						</p>
 					</div>
 				</div>
 				<div class="span3 animated-slow flyIn">
 					<div class="service-box">
 						<img src="img/icons/basket.png" alt="" />
-						<h2>Ecommerce</h2>
+						<h2>Handmade Cards</h2>
 						<p>
 							Lorem Ipsum is simply dummy text of the printing and typesetting industry.
 						</p>
