--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 			<div class="row">
 				<div class="span6 alignright flyLeft">
 					<blockquote class="large">
-						There's huge space beetween creativity and imagination <cite>Mark Simmons, Nett Media</cite>
+					Creativity is a wild mind & a disciplined eye. <cite>Dorothy Parker</cite>
 					</blockquote>
 				</div>
 				<div class="span6 aligncenter flyRight">
@@ -168,12 +168,12 @@
 	<!-- section: services -->
 	<section id="services" class="section orange">
 		<div class="container">
-			<h4>Services</h4>
+			<h4>Products & Services</h4>
 			<!-- Four columns -->
 			<div class="row">
 				<div class="span3 animated-fast flyIn">
 					<div class="service-box">
-						<img src="img/icons/laptop.png" alt="" />
+						<img src="img/icons/stone.png" alt="" />
 						<h2>Stone Paintings</h2>
 						<p>
 							Gifts that last to infinity as such the eternity of a stone.
@@ -203,7 +203,7 @@
 						<img src="img/icons/basket.png" alt="" />
 						<h2>Handmade Cards</h2>
 						<p>
-							Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+							Personal touch makes everything beautiful.
 						</p>
 					</div>
 				</div>
