--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 				</div>
 				<div class="span3 animated-slow flyIn">
 					<div class="service-box">
-						<img src="img/icons/basket.png" alt="" />
+						<img src="img/icons/cards.png" alt="" />
 						<h2>Handmade Cards</h2>
 						<p>
 							Personal touch makes everything beautiful.
