--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 					</blockquote>
 				</div>
 				<div class="span6 aligncenter flyRight">
-					<i class="icon-coffee icon-10x"></i>
+				<img src="img/icons/brain.png" alt="" />
 				</div>
 			</div>
 		</div>
@@ -182,7 +182,7 @@
 				</div>
 				<div class="span3 animated flyIn">
 					<div class="service-box">
-						<img src="img/icons/lab.png" alt="" />
+						<img src="img/icons/gifts.png" alt="" />
 						<h2>Customized Gifts</h2>
 						<p>
 							Any occasion becomes special with personalized gifts.
@@ -412,7 +412,7 @@
 			<div class="row">
 				<div class="span12 aligncenter flyLeft">
 					<blockquote class="large">
-						We are an established and trusted web agency with a reputation for commitment and high integrity
+						Those gifts are ever more precious which the giver has made previous. <cite>Ovid</cite>
 					</blockquote>
 				</div>
 				<div class="span12 aligncenter flyRight">
