--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
 					 <div class="contact-email">
 						 <i class="ion-ios-email-outline"></i>
 						 <h3>Email</h3>
-						 <p><a href="mailto:info@elsaannacreations.in">Sindhu Raveendra</a></p>
+						 <p><a href="mailto:info@elsaannacreations.in">Info- Elsa Anna Creations</a></p>
 					 </div>
 								</div>
 							</div>
