--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 			<div class="row">
 				<div class="span3 animated-fast flyIn">
 					<div class="service-box">
-						<img src="img/icons/stone.png" alt="" />
+						<img src="img/icons/stone1.png" alt="" />
 						<h2>Stone Paintings</h2>
 						<p>
 							Gifts that last to infinity as such the eternity of a stone.
@@ -182,7 +182,7 @@
 				</div>
 				<div class="span3 animated flyIn">
 					<div class="service-box">
-						<img src="img/icons/gifts.png" alt="" />
+						<img src="img/icons/gifts1.png" alt="" />
 						<h2>Customized Gifts</h2>
 						<p>
 							Any occasion becomes special with personalized gifts.
