--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
 					</blockquote>
 				</div>
 				<div class="span12 aligncenter flyRight">
-					<i class="icon-rocket icon-10x"></i>
+					<i class="icon-gift icon-10x"></i>
 				</div>
 			</div>
 		</div>
