--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 							<li><a title="services" href="#services">Services</a></li>
 							<li><a title="works" href="#works">Works</a></li>
 							<li><a title="contact" href="#contact">Contact</a></li>
-							<li><a href="page.html">Page</a></li>
+							<li><a href="https://www.instagram.com/elsaanna.creations/?hl=en">Instagram</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -100,7 +100,7 @@
 			<div class="row">
 				<div class="span4 offset1">
 					<div>
-						<h2>We live with <strong>creativity</strong></h2>
+						<h3> We live with creativity</h3>
 						<p>
 							A start up that believes gifts are more than mere presents.
 							Our products tell the stories of our customers.
@@ -426,17 +426,18 @@
 	<!-- section: contact -->
 	<section id="contact" class="section green">
 		<div class="container">
+			<div class="span10 offset1">
 			<h4>Get in Touch</h4>
-			<p>
-				Talk to us, and get your word done as you desire
-			</p>
+
 			<div class="blankdivider30">
 			</div>
 			<div class="col-md-4">
 					 <div class="contact-email">
 						 <i class="ion-ios-email-outline"></i>
-						 <h3>Email</h3>
-						 <p><a href="mailto:info@elsaannacreations.in">Info- Elsa Anna Creations</a></p>
+						 <h4>Mail us @
+							 <div class="blankdivider30">
+							 </div>
+						 <p><a href="mailto:info@elsaannacreations.in">Info@Elsa Anna Creations</a></p> </h4>
 					 </div>
 								</div>
 							</div>
@@ -452,10 +453,8 @@
 			<div class="row">
 				<div class="span6 offset3">
 					<ul class="social-networks">
-						<li><a href="#"><i class="icon-circled icon-bgdark icon-instagram icon-2x"></i></a></li>
-						<li><a href="#"><i class="icon-circled icon-bgdark icon-twitter icon-2x"></i></a></li>
-						<li><a href="#"><i class="icon-circled icon-bgdark icon-dribbble icon-2x"></i></a></li>
-						<li><a href="#"><i class="icon-circled icon-bgdark icon-pinterest icon-2x"></i></a></li>
+						<li><a href="https://www.instagram.com/elsaanna.creations/?hl=en"><i class="icon-circled icon-bgdark icon-instagram icon-2x"></i></a></li>
+						<li><a href="https://www.facebook.com/pages/category/Art/Elsa-Anna-Creations-602294543458658/"><i class="icon-circled icon-bgdark icon-facebook icon-2x"></i></a></li>
 					</ul>
 					<p class="copyright">
 						&copy; Maxim Theme. All rights reserved.
