--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
 			<div class="row">
 				<div class="span12 aligncenter flyLeft">
 					<blockquote class="large">
-						Those gifts are ever more precious which the giver has made previous. <cite>Ovid</cite>
+						Those gifts are ever more precious which the giver has made precious. <cite>Ovid</cite>
 					</blockquote>
 				</div>
 				<div class="span12 aligncenter flyRight">
