--- a/index.html
+++ b/index.html
@@ -254,11 +254,11 @@
 						<!-- portfolio item -->
 						<div class="portfolio-item grid print photography">
 							<div class="portfolio">
-								<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
-						<img src="img/works/1.png" alt="" />
+								<a href="img/works/event1b.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
+						<img src="img/works/event1.png" alt="" />
 						<div class="portfolio-overlay">
 							<div class="thumb-info">
-								<h5>Portfolio name</h5>
+								<h5>Photobooths</h5>
 								<i class="icon-plus icon-2x"></i>
 							</div>
 						</div>
@@ -269,11 +269,11 @@
 						<!-- portfolio item -->
 						<div class="portfolio-item grid print design web">
 							<div class="portfolio">
-								<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
-						<img src="img/works/2.png" alt="" />
+								<a href="img/works/event2b.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
+						<img src="img/works/event2.png" alt="" />
 						<div class="portfolio-overlay">
 							<div class="thumb-info">
-								<h5>Portfolio name</h5>
+								<h5>Birthday Parties</h5>
 								<i class="icon-plus icon-2x"></i>
 							</div>
 						</div>
