Insta link on header

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 							<li><a title="services" href="#services">Services</a></li>
 							<li><a title="works" href="#works">Works</a></li>
 							<li><a title="contact" href="#contact">Contact</a></li>
-							<li><a href="https://www.instagram.com/elsaanna.creations/?hl=en">Instagram</a></li>
+							<li><a href="https://www.instagram.com/elsaanna.creations/?hl=en"> <img src="img/icons/instagram.png" alt="" />@elsaanna.creations</a></li>
 						</ul>
 					</nav>
 				</div>
