--- a/index.html
+++ b/index.html
@@ -226,22 +226,22 @@
 						</li>
 						<li>
 							<a href="#" data-filter=".web">
-								<h5>Web</h5>
+								<h5>Paintings</h5>
 							</a>
 						</li>
 						<li>
 							<a href="#" data-filter=".print">
-								<h5>Print</h5>
+								<h5>Gifts</h5>
 							</a>
 						</li>
 						<li>
 							<a href="#" data-filter=".design">
-								<h5>Design</h5>
+								<h5>Decor</h5>
 							</a>
 						</li>
 						<li>
 							<a href="#" data-filter=".photography">
-								<h5>Photography</h5>
+								<h5>Cards</h5>
 							</a>
 						</li>
 					</ul>
@@ -252,7 +252,7 @@
 				<div class="span12">
 					<div id="portfolio-wrap">
 						<!-- portfolio item -->
-						<div class="portfolio-item grid print photography">
+						<div class="portfolio-item grid design">
 							<div class="portfolio">
 								<a href="img/works/event1b.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
 						<img src="img/works/event1.png" alt="" />
@@ -267,7 +267,7 @@
 						</div>
 						<!-- end portfolio item -->
 						<!-- portfolio item -->
-						<div class="portfolio-item grid print design web">
+						<div class="portfolio-item grid design">
 							<div class="portfolio">
 								<a href="img/works/event2b.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
 						<img src="img/works/event2.png" alt="" />
