works image add

--- a/index.html
+++ b/index.html
@@ -252,10 +252,55 @@
 				<div class="span12">
 					<div id="portfolio-wrap">
 						<!-- portfolio item -->
+						<div class="portfolio-item grid web">
+							<div class="portfolio">
+								<a href="img/works/1b.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
+						<img src="img/works/1.png" alt="" />
+						<div class="portfolio-overlay">
+							<div class="thumb-info">
+								<h5>Stone Paintings-1</h5>
+								<i class="icon-plus icon-2x"></i>
+							</div>
+						</div>
+						</a>
+							</div>
+						</div>
+						<!-- end portfolio item -->
+						<!-- portfolio item -->
+						<div class="portfolio-item grid print">
+							<div class="portfolio">
+								<a href="img/works/2b.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
+						<img src="img/works/2.png" alt="" />
+						<div class="portfolio-overlay">
+							<div class="thumb-info">
+								<h5>Gifts-1</h5>
+								<i class="icon-plus icon-2x"></i>
+							</div>
+						</div>
+						</a>
+							</div>
+						</div>
+						<!-- end portfolio item -->
+						<!-- portfolio item -->
+						<div class="portfolio-item grid web">
+							<div class="portfolio">
+								<a href="img/works/3b.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
+						<img src="img/works/3.png" alt="" />
+						<div class="portfolio-overlay">
+							<div class="thumb-info">
+								<h5>Stone Paintings-2</h5>
+								<i class="icon-plus icon-2x"></i>
+							</div>
+						</div>
+						</a>
+							</div>
+						</div>
+						<!-- end portfolio item -->
+						<!-- portfolio item -->
 						<div class="portfolio-item grid design">
 							<div class="portfolio">
-								<a href="img/works/event1b.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
-						<img src="img/works/event1.png" alt="" />
+								<a href="img/works/4b.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
+						<img src="img/works/4.png" alt="" />
 						<div class="portfolio-overlay">
 							<div class="thumb-info">
 								<h5>Photobooths</h5>
@@ -267,58 +312,13 @@
 						</div>
 						<!-- end portfolio item -->
 						<!-- portfolio item -->
-						<div class="portfolio-item grid design">
+						<div class="portfolio-item grid print">
 							<div class="portfolio">
-								<a href="img/works/event2b.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
-						<img src="img/works/event2.png" alt="" />
-						<div class="portfolio-overlay">
-							<div class="thumb-info">
-								<h5>Birthday Parties</h5>
-								<i class="icon-plus icon-2x"></i>
-							</div>
-						</div>
-						</a>
-							</div>
-						</div>
-						<!-- end portfolio item -->
-						<!-- portfolio item -->
-						<div class="portfolio-item grid print design">
-							<div class="portfolio">
-								<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
-						<img src="img/works/3.png" alt="" />
-						<div class="portfolio-overlay">
-							<div class="thumb-info">
-								<h5>Portfolio name</h5>
-								<i class="icon-plus icon-2x"></i>
-							</div>
-						</div>
-						</a>
-							</div>
-						</div>
-						<!-- end portfolio item -->
-						<!-- portfolio item -->
-						<div class="portfolio-item grid photography web">
-							<div class="portfolio">
-								<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
-						<img src="img/works/4.png" alt="" />
-						<div class="portfolio-overlay">
-							<div class="thumb-info">
-								<h5>Portfolio name</h5>
-								<i class="icon-plus icon-2x"></i>
-							</div>
-						</div>
-						</a>
-							</div>
-						</div>
-						<!-- end portfolio item -->
-						<!-- portfolio item -->
-						<div class="portfolio-item grid photography web">
-							<div class="portfolio">
-								<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
+								<a href="img/works/5b.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
 						<img src="img/works/5.png" alt="" />
 						<div class="portfolio-overlay">
 							<div class="thumb-info">
-								<h5>Portfolio name</h5>
+								<h5>Gifts-2</h5>
 								<i class="icon-plus icon-2x"></i>
 							</div>
 						</div>
@@ -327,13 +327,13 @@
 						</div>
 						<!-- end portfolio item -->
 						<!-- portfolio item -->
-						<div class="portfolio-item grid photography web">
+						<div class="portfolio-item grid web">
 							<div class="portfolio">
-								<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
+								<a href="img/works/6b.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
 						<img src="img/works/6.png" alt="" />
 						<div class="portfolio-overlay">
 							<div class="thumb-info">
-								<h5>Portfolio name</h5>
+								<h5>Stone Painting-3</h5>
 								<i class="icon-plus icon-2x"></i>
 							</div>
 						</div>
@@ -342,13 +342,13 @@
 						</div>
 						<!-- end portfolio item -->
 						<!-- portfolio item -->
-						<div class="portfolio-item grid photography web">
+						<div class="portfolio-item grid print">
 							<div class="portfolio">
-								<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
+								<a href="img/works/7b.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
 						<img src="img/works/7.png" alt="" />
 						<div class="portfolio-overlay">
 							<div class="thumb-info">
-								<h5>Portfolio name</h5>
+								<h5>Gifts-3</h5>
 								<i class="icon-plus icon-2x"></i>
 							</div>
 						</div>
@@ -357,13 +357,13 @@
 						</div>
 						<!-- end portfolio item -->
 						<!-- portfolio item -->
-						<div class="portfolio-item grid photography">
+						<div class="portfolio-item grid web">
 							<div class="portfolio">
-								<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
+								<a href="img/works/8b.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
 						<img src="img/works/8.png" alt="" />
 						<div class="portfolio-overlay">
 							<div class="thumb-info">
-								<h5>Portfolio name</h5>
+								<h5>Stone Painting-4</h5>
 								<i class="icon-plus icon-2x"></i>
 							</div>
 						</div>
@@ -372,13 +372,13 @@
 						</div>
 						<!-- end portfolio item -->
 						<!-- portfolio item -->
-						<div class="portfolio-item grid photography web">
+						<div class="portfolio-item grid print">
 							<div class="portfolio">
-								<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
+								<a href="img/works/9b.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
 						<img src="img/works/9.png" alt="" />
 						<div class="portfolio-overlay">
 							<div class="thumb-info">
-								<h5>Portfolio name</h5>
+								<h5>Gifts-4</h5>
 								<i class="icon-plus icon-2x"></i>
 							</div>
 						</div>
@@ -387,13 +387,13 @@
 						</div>
 						<!-- end portfolio item -->
 						<!-- portfolio item -->
-						<div class="portfolio-item grid design web">
+						<div class="portfolio-item grid design">
 							<div class="portfolio">
-								<a href="img/works/big.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
+								<a href="img/works/10b.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
 						<img src="img/works/10.png" alt="" />
 						<div class="portfolio-overlay">
 							<div class="thumb-info">
-								<h5>Portfolio name</h5>
+								<h5>Birthday Parties</h5>
 								<i class="icon-plus icon-2x"></i>
 							</div>
 						</div>
