Work images added

--- a/index.html
+++ b/index.html
@@ -401,6 +401,66 @@
 							</div>
 						</div>
 						<!-- end portfolio item -->
+						<!-- portfolio item -->
+						<div class="portfolio-item grid web">
+							<div class="portfolio">
+								<a href="img/works/11b.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
+						<img src="img/works/11.png" alt="" />
+						<div class="portfolio-overlay">
+							<div class="thumb-info">
+								<h5>Stone Paintings-5</h5>
+								<i class="icon-plus icon-2x"></i>
+							</div>
+						</div>
+						</a>
+							</div>
+						</div>
+						<!-- end portfolio item -->
+						<!-- portfolio item -->
+						<div class="portfolio-item grid print">
+							<div class="portfolio">
+								<a href="img/works/12b.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
+						<img src="img/works/12.png" alt="" />
+						<div class="portfolio-overlay">
+							<div class="thumb-info">
+								<h5>Gifts-5</h5>
+								<i class="icon-plus icon-2x"></i>
+							</div>
+						</div>
+						</a>
+							</div>
+						</div>
+						<!-- end portfolio item -->
+						<!-- portfolio item -->
+						<div class="portfolio-item grid web">
+							<div class="portfolio">
+								<a href="img/works/13b.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
+						<img src="img/works/13.png" alt="" />
+						<div class="portfolio-overlay">
+							<div class="thumb-info">
+								<h5>Stone Paintings-5</h5>
+								<i class="icon-plus icon-2x"></i>
+							</div>
+						</div>
+						</a>
+							</div>
+						</div>
+						<!-- end portfolio item -->
+						<!-- portfolio item -->
+						<div class="portfolio-item grid photography">
+							<div class="portfolio">
+								<a href="img/works/14b.jpg" data-pretty="prettyPhoto[gallery1]" class="portfolio-image">
+						<img src="img/works/14.png" alt="" />
+						<div class="portfolio-overlay">
+							<div class="thumb-info">
+								<h5>Invitations</h5>
+								<i class="icon-plus icon-2x"></i>
+							</div>
+						</div>
+						</a>
+							</div>
+						</div>
+						<!-- end portfolio item -->
 					</div>
 				</div>
 			</div>
