--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 						<img class="team-thumb img-circle" src="img/team/img-7.jpg" alt="" />
 						<h3>Sindhu Raveendra</h3>
 						<p>
-							Artist/ Genius
+							Artist
 						</p>
 					</div>
 				</div>
@@ -138,7 +138,7 @@
 						<img class="team-thumb img-circle" src="img/team/img-6.jpg" alt="" />
 						<h3>Bindu Raveendra</h3>
 						<p>
-							Useless
+							Designer
 						</p>
 					</div>
 				</div>
