--- a/index.html
+++ b/index.html
@@ -144,10 +144,10 @@
 				</div>
 				<div class="span2 flyIn">
 					<div class="people">
-						<img class="team-thumb img-circle" src=".jpg" alt="" />
-						<h3></h3>
+						<img class="team-thumb img-circle" src="img-5.jpg" alt="" />
+						<h3>Dhanush S</h3>
 						<p>
-
+							Unpaid Web Designer
 						</p>
 					</div>
 				</div>
