--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 				</div>
 				<div class="span2 flyIn">
 					<div class="people">
-						<img class="team-thumb img-circle" src="img-5.jpg" alt="" />
+						<img class="team-thumb img-circle" src="img/team/img-5.jpg" alt="" />
 						<h3>Dhanush S</h3>
 						<p>
 							Unpaid Web Designer
