--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 						<img class="team-thumb img-circle" src="img/team/img-5.jpg" alt="" />
 						<h3>Dhanush S</h3>
 						<p>
-							Poor guy
+							Motivator
 						</p>
 					</div>
 				</div>
